--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <section class="home">
             <div class="in-flex"> <img class="img1" src="https://media.discordapp.net/attachments/824474794375905310/916799999059300382/ParaCami.png?width=768&height=431"> </div>
             <div class="in-flex">
-                <div class="text1"> ¡Feliz cumpleaños! Espero que hoy hayas tenido en día muy lindo. Perdón por no poder haberte regalado algo más, pero espero que te haya gustado el dibujo. Si te soy sincero, no sé de a mucho qué decirte, pero sólo espero que estés feliz. Por cierto, felicidades por haber pasado el año xd. </div>
+                <div class="text1"> ¡Feliz cumpleaños! Espero que hoy hayas tenido un día muy lindo. Perdón por no poder haberte regalado algo más, pero espero que te haya gustado el dibujo. Si te soy sincero, no sé de a mucho qué decirte, pero sólo espero que estés feliz. Por cierto, felicidades por haber pasado el año xd. </div>
                 <div class="text1"> Me alegro mucho de haberte conocido, aunque no lo demuestro mucho, en serio me hace feliz verte (No sé si decirte eso sea necesario para tu cumpleaños, pero... a, no sé). Lo que quiero decir... Sin alargar mucho... Es que te aprecio y te quiero muchísimo❤️ </div>
             </div>
         </section>
